# blog

./: .editorconfig  .markdownlint.json  .prettierignore  .prettierrc.yaml  Cargo.toml  astro.config.mjs  eslint.config.js  package-lock.json  package.json
.github/workflows/: deploy.yml
src/: 00000000-0000-blog-template.md.handlebars  main.rs
src/components/: BlogPost.astro  BlogTime.astro  Footer.astro  Header.astro  Navigation.astro  Social.astro  UwU.astro
src/layouts/: BaseLayout.astro  MarkdownPostLayout.astro
src/pages/: about.astro  blog.astro  index.astro  rss.xml.js
src/pages/posts/: 20241220-2101-tracing-ffi.md  20250109-0110-docker.md  20250214-1735-ai-can-t-code.md  20250907-1945-rethinking-route-sink.md  20251019-0129-sink-might-be-a-relic-but-a-damn-powerful-one.md  20251026-1927-new-queue-for-ruchei.md
src/pages/tags/: [tag].astro  index.astro
src/scripts/: menu.js
src/styles/: global.css
